content/vault/v1.19.x/content/docs/license/index.mdx
---
layout: docs
page_title: Vault Enterprise license keys
description: Find documentation related to Vault Enterprise license keys
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-01T14:39:24-05:00
last_modified: 2025-07-02T11:30:26-05:00
# END AUTO GENERATED METADATA
---

# Vault Enterprise license keys

@include 'alerts/enterprise-only.mdx'

Vault Enterprise 1.8 introduced EULA enhancements and license keys that control
the availability of features. You must have a Vault Enterprise binary
(evaluation or non-evaluation) downloaded from
[releases.hashicorp.com](https://releases.hashicorp.com/vault/) to use a Vault
Enterprise license key. Vault Enterprise license keys do not apply to
[HCP Vault Dedicated](/hcp/docs/vault/what-is-hcp-vault) clusters.

## How license keys work

License keys for Vault Enterprise determine how long you can use Vault and the
availability of product features.

Each license key has a start date and an expiration date:

- You **cannot** start, restart, or unseal any Vault versions **released after**
  the expiration date. As a result, you also cannot update Vault with security
  fixes released after the expiration date.
- You **can** start, restart, and unseal Vault versions **released before** the
  expiration date.

<Tip>

If you have an expired license key and need to perform an immediate update to
apply critical security fixes, reach out to your Vault support contact for a
temporary trial license key.

</Tip>

Some license keys also enforce a termination date. If your license key enforces
a termination date, you cannot start, restart, or unseal any version of Vault
after the termination date. Existing, unsealed nodes continue to operate
normally until they restart or have to unseal again.

| Key type   | Issue date            | Termination date                              |
| ---------- | --------------------- | --------------------------------------------- |
| Commercial | After September 2025  | 60 days after expiration                      |
| Commercial | Before September 2025 | Non-terminating, or 10 years after expiration |
| Trial      | Any                   | On, or one day after, expiration              |

To review the dates on a license key, run
[`vault license inspect`](/vault/docs/commands/license/inspect) for a local key,
or [`vault license get`](/vault/docs/commands/license/get) to query the license
key of a Vault cluster.

You must comply with the terms of your Vault Enterprise license agreement,
regardless of any automated license key enforcement behaviors. Continued use of
Vault Enterprise after your subscription license period expires may violate the
terms of your license agreement.

## Additional resources

<Tabs>

<Tab heading="Guides">

- [Automatically load a Vault enterprise license](/vault/docs/enterprise/license/autoloading) -
  Configure Vault to automatically load your enterprise license.

- [Automated license utilization reporting](/vault/docs/enterprise/license/autoloading) -
  Learn about the data HashiCorp collects automatically to meter Enterprise
  license utilization and how to enable or disable automated reporting

- [Manual license utilization reporting](/vault/docs/enterprise/license/manual-reporting) -
  Learn how to manually export, review, and send license utilization data to
  HashiCorp through the Vault CLI or HCP web portal.

- [Anonymous product usage reporting](/vault/docs/enterprise/license/product-usage-reporting) -
  Learn about the anonymized data HashiCorp collects automatically for product
  usage reporting and how to enable or disable data collection.

</Tab>

<Tab heading="Tutorials">

- [Install a HashiCorp Enterprise License](/vault/tutorials/enterprise/hashicorp-enterprise-license) -
  guided walkthrough for loading a Vault license.

</Tab>

</Tabs>
