content/vault/v2.x/content/docs/license/index.mdx
---
layout: docs
page_title: Vault Enterprise license keys
description: Find documentation related to Vault Enterprise license keys
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-04-15T00:15:31.000Z
last_modified: 2026-04-15T00:15:31.000Z
# END AUTO GENERATED METADATA
---

# Vault Enterprise license keys

@include 'alerts/enterprise-only.mdx'

Vault Enterprise 1.8 introduced EULA enhancements and license keys that control
the availability of features. You must have a Vault Enterprise binary
(evaluation or non-evaluation) downloaded from
[releases.hashicorp.com](https://releases.hashicorp.com/vault/) to use a Vault
Enterprise license key. Vault Enterprise license keys do not apply to
[HCP Vault Dedicated](/hcp/docs/vault/what-is-hcp-vault) clusters.

## How license keys work

License keys for Vault Enterprise determine how long you can use Vault and the
availability of product features.

Each license key has a start date and an expiration date:

- You **cannot** start, restart, or unseal any Vault versions **released after**
  the expiration date. As a result, you also cannot update Vault with security
  fixes released after the expiration date.
- You **can** start, restart, and unseal Vault versions **released before** the
  expiration date.

<Tip>

If you have an expired license key and need to perform an immediate update to
apply critical security fixes, reach out to your Vault support contact for a
temporary trial license key.

</Tip>

Some license keys also enforce a termination date. If your license key enforces
a termination date, you cannot start, restart, or unseal any version of Vault
after the termination date. Existing, unsealed nodes continue to operate
normally until they restart or have to unseal again.

| Key type   | Issue date            | Termination date                              |
| ---------- | --------------------- | --------------------------------------------- |
| Commercial | After September 2025  | 60 days after expiration                      |
| Commercial | Before September 2025 | Non-terminating, or 10 years after expiration |
| Trial      | Any                   | On, or one day after, expiration              |

To review the dates on a license key, run
[`vault license inspect`](/vault/docs/commands/license/inspect) for a local key,
or [`vault license get`](/vault/docs/commands/license/get) to query the license
key of a Vault cluster.

You must comply with the terms of your Vault Enterprise license agreement,
regardless of any automated license key enforcement behaviors. Continued use of
Vault Enterprise after your subscription license period expires may violate the
terms of your license agreement.

## IBM Passport Advantage Online license keys

Vault Enterprise 2.0 introduced support for IBM Passport Advantage Online license keys that contain a valid
Vault entitlement. To use an IBM Passport Advantage Online license key, you must configure the
[`license_entitlement`](/vault/docs/configuration/license-entitlement) stanza to select the
desired entitlement from the license. Differences from using a HashiCorp license key include:

- When viewing the license information using CLI or API commands, IBM Passport Advantage Online licenses show additional
`edition` and `add_ons` fields corresponding to the selected entitlement.
- IBM Passport Advantage Online licenses always enforce the termination date, following the behavior described in the section above.

## PKI-only license keys

Vault Enterprise 1.21 introduced licensing for clusters based on the number of
[certificates issued](./concepts/certificate-counts) through the PKI secrets
engine. The license key for a cluster licensed on the basis of certificates
issued automatically sets the cluster to run in PKI-only mode. Cluster behavior
changes while running in PKI-only mode in the following ways:

1. **Restricted mounts**. A PKI-only cluster rejects all API requests to secret
   engine mounts other than the PKI secrets engine. The restriction does not
   apply to authentication or system API paths.

1. **Client counting**. A PKI-only cluster hides the **Client Usage** dashboard
   in the Vault UI because the metric is irrelevant for license utilization
   purposes on that cluster.

## Additional resources

<Tabs>

<Tab heading="Guides">

- [Automatically load a Vault enterprise license](/vault/docs/license/autoloading) -
  Configure Vault to automatically load your enterprise license.

- [License utilization reporting](/vault/docs/license/utilization) - Learn about the data IBM collects automatically to meter Enterprise license utilization

- [Manual license utilization reporting](/vault/docs/license/utilization/manual-reporting) - Learn how to opt out of automated reporting and how to manually export, review, and send license utilization data to IBM.

- [Anonymous product usage reporting](/vault/docs/license/product-usage-reporting) -
  Learn about the anonymized data IBM collects automatically for product
  usage reporting and how to enable or disable data collection.

</Tab>

<Tab heading="Tutorials">

- [Install a HashiCorp Enterprise License](/vault/tutorials/enterprise/hashicorp-enterprise-license) -
  guided walkthrough for loading a Vault license.

</Tab>

</Tabs>
